Add an initial part to the README.md file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-paginated-resource",
   "version": "0.0.2",
-  "description": "The pagination library designed for living beings",
+  "description": "The Vue pagination library designed for living beings 😵",
   "repository": "https://github.com/daleal/vue-paginated-resource",
   "bugs": "https://github.com/daleal/vue-paginated-resource/issues",
   "license": "MIT",
